<resources>
    <string name="app_name">Persistent Data Store</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_auto_backup">Auto Backup Demo</string>
    <string name="menu_file">Files Demo</string>
    <string name="menu_shared_references">Shared References Demo</string>
    <string name="menu_word_room">Room Demo</string>
    <string name="menu_custom_data_store">Custom Data Store Demo</string>
    <string name="menu_app_settings">App Settings Demo</string>
    <string name="home_second">Home Second</string>


    <!-- String for Shared Preferences sample-->
    <!-- Button label for blue button -->
    <string name="blue_button">Blue</string>
    <!-- Button label for green button -->
    <string name="green_button">Green</string>
    <!-- Button label for red button -->
    <string name="red_button">Red</string>
    <!-- Button label for black button -->
    <string name="black_button">Black</string>
    <!-- Default string for count textview -->
    <string name="default_count">0</string>
    <!-- Button label for Count button -->
    <string name="count_button">Count</string>
    <!-- Button label for Reset button -->
    <string name="reset_button">Reset</string>


    <!-- Strings for app settings sample-->
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="title_activity_order">Order Activity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social
        recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations
        for people to contact based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_account">Account</string>
    <string name="pref_title_account">Market</string>
    <string-array name="pref_market_titles">
        <item>United States</item>
        <item>Canada</item>
        <item>United Kingdom</item>
        <item>India</item>
        <item>Japan</item>
        <item>Other</item>
    </string-array>
    <string-array name="pref_market_values">
        <item>US</item>
        <item>CA</item>
        <item>UK</item>
        <item>IN</item>
        <item>JA0</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_account_settings">Account settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message
        notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>

    <!-- Strings for Room Demo-->
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="clear_all_data">Clear all</string>
    <string name="unable_to_update">Unable to update</string>
</resources>
