<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/action_contact"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="50"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:orderInCategory="10"
        android:title="@string/action_order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_status"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="20"
        android:title="@string/action_status"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_favorites"
        android:icon="@android:drawable/ic_dialog_alert"
        android:orderInCategory="30"
        android:title="@string/action_favorites"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_clear_data"
        android:orderInCategory="100"
        android:title="@string/clear_all_data"
        app:showAsAction="never" />
</menu>
